@@ -11,7 +11,10 @@ class GlobalKeyEventFilter : public QObject {
 public:
 	explicit GlobalKeyEventFilter(QObject *parent = nullptr);
 
+	bool anyTabletEventsReceived() const { return m_anyTabletEventsReceived; }
+
 signals:
+	void tabletEventReceived();
 #if !defined(__EMSCRIPTEN__) && !defined(Q_OS_ANDROID)
 	void tabletProximityChanged(bool enter, bool eraser);
 	void eraserNear(bool near);
@@ -25,8 +28,17 @@ private:
 	void checkCanvasFocus(QKeyEvent *event);
 	void updateEraserNear(bool eraserNear);
 
+	void onTabletEventReceived()
+	{
+		if(!m_anyTabletEventsReceived) {
+			m_anyTabletEventsReceived = true;
+			Q_EMIT tabletEventReceived();
+		}
+	}
+
 	long long m_lastAltPress;
 	unsigned long long m_lastAltInternalTimestamp;
+	bool m_anyTabletEventsReceived = false;
 #if !defined(__EMSCRIPTEN__) && !defined(Q_OS_ANDROID)
 	bool m_eraserNear = false;
 	bool m_tabletDown = false;
