@@ -9,6 +9,7 @@ Unreleased Version 2.3.1-pre
  * Server Fix: Log streamed resets being blocked properly. Thanks grimsley for reporting.
  * Feature: Allow selecting custom color scheme files dropped into the application data.
  * Fix: Work around some some Android devices eating three- and four-finger taps unconditionally. Thanks Afiq for reporting.
+ * Fix: Don't try to set the one-finger touch input on Android according to whether the device says it has a stylus attached because devices just lie about it. It's always set to be dynamically detected by default now.
 
 2025-11-18 Version 2.3.0
  * Fix: Don't show "exit layer view" notice when there's no canvas.
